force-app/main/default/objects/SM_DossierSolidariteTech__c/SM_DossierSolidariteTech__c.object-meta.xml
<CustomObject>
    <description>Tâche technique FT2-1273 permettant d&apos;ajouter  les picklist ainsi leur valeurs</description>
    <label>SM_DossierSolidariteTech</label>
    <nameField>
        <label>SM_DossierSolidariteTech Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SM_DossierSolidariteTech</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>