force-app/main/default/objects/SM_DossierSolidariteTech__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>@SMILE categories</description>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZAK</fullName>
                <label>Akio</label>
            </value>
            <value>
                <fullName>ZBO</fullName>
                <label>Back office</label>
            </value>
            <value>
                <fullName>ZSM</fullName>
                <label>SMS</label>
            </value>
            <value>
                <fullName>URL</fullName>
                <label>Web</label>
            </value>
            <value>
                <fullName>INT</fullName>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>TEL</fullName>
                <label>Tél. domicile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>