force-app/main/default/objects/SM_DossierSolidariteTech__c/fields/DossierStatus__c.field-meta.xml
<CustomField>
    <fullName>DossierStatus__c</fullName>
    <description>@SMILE statut du dossier</description>
    <label>statut dossier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENGA</fullName>
                <label>Fiche d&apos;engagement</label>
            </value>
            <value>
                <fullName>RFSL</fullName>
                <label>Prise en charge FSL</label>
            </value>
            <value>
                <fullName>TSAA</fullName>
                <label>Terminé - sans aide accordée</label>
            </value>
            <value>
                <fullName>TAPA</fullName>
                <label>Terminé - aide partielle</label>
            </value>
            <value>
                <fullName>TATA</fullName>
                <label>Terminé - aide totale</label>
            </value>
            <value>
                <fullName>TAPR</fullName>
                <label>Terminé - aide préventive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>