force-app/main/default/objects/SM_DossierSolidariteTech__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <description>@SMILE motif</description>
    <label>Motif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Accord commercial</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Accord gestionnaire</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Accord hiérarchique</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Règlement effectué</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Facture rectificative en cours</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Résiliation</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Prise en charge par les services sociaux</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Attente retour relève du distributeur</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Motif de rejet différent de prov. Insuffisante</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Rétractation erreur CHF</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Conduite applicative</label>
            </value>
            <value>
                <fullName>NULL</fullName>
                <isActive>false</isActive>
                <label>Sans objet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>