force-app/main/default/objects/SM_DossierSolidariteTech__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>@SMILE Salutation</description>
    <label>Civilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mlle</fullName>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
                <label>M.</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>