force-app/main/default/objects/SM_DossierSolidariteTech__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>@SMILE Etape</description>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DossierStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z110</fullName>
                <label>Z100-OK engagement + OK info SvSx</label>
            </value>
            <value>
                <fullName>Z120</fullName>
                <label>Z100-OK engagement + KO info SvSx</label>
            </value>
            <value>
                <fullName>Z130</fullName>
                <label>Z100-KO engagement + OK info SvSx</label>
            </value>
            <value>
                <fullName>Z140</fullName>
                <label>Z100-KO engagement + KO info SvSx</label>
            </value>
            <value>
                <fullName>Z210</fullName>
                <label>Z200-Dossier FSL en cours</label>
            </value>
            <value>
                <fullName>Z220</fullName>
                <label>Z200-Refus de prise en charge FSL</label>
            </value>
            <value>
                <fullName>Z310</fullName>
                <label>Z300-Aide FSL Totale</label>
            </value>
            <value>
                <fullName>Z320</fullName>
                <label>Z300-Aide FSL Partielle</label>
            </value>
            <value>
                <fullName>Z325</fullName>
                <label>Z300-Aide FSL Préventive</label>
            </value>
            <value>
                <fullName>Z330</fullName>
                <label>Z300-Aide FSL Refusée</label>
            </value>
            <value>
                <fullName>Z350</fullName>
                <label>Z500-Aide en attente d&apos;affectation</label>
            </value>
            <value>
                <fullName>Z360</fullName>
                <label>Z500-Aide affectée</label>
            </value>
            <value>
                <fullName>Z370</fullName>
                <label>Z500-Dossier ajourné</label>
            </value>
            <value>
                <fullName>Z380</fullName>
                <label>Z500-Dossier clos</label>
            </value>
            <value>
                <fullName>Z410</fullName>
                <label>Z400-Plan d&apos;apurement proposé</label>
            </value>
            <value>
                <fullName>Z420</fullName>
                <label>Z400-Plan d&apos;apurement accepté</label>
            </value>
            <value>
                <fullName>Z430</fullName>
                <label>Z400-Plan d&apos;apurement refusé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>