force-app/main/default/objects/SM_DossierSolidariteTech__c/fields/TypeOfAssistance__c.field-meta.xml
<CustomField>
    <fullName>TypeOfAssistance__c</fullName>
    <description>@SMILE type d&apos;aide</description>
    <label>Type d&apos;aide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z100</fullName>
                <label>Aide FSL</label>
            </value>
            <value>
                <fullName>Z200</fullName>
                <label>Aide CCAS conventionnée</label>
            </value>
            <value>
                <fullName>Z300</fullName>
                <label>Aide FSL autres fournisseurs</label>
            </value>
            <value>
                <fullName>Z400</fullName>
                <label>Autre aide publique</label>
            </value>
            <value>
                <fullName>Z500</fullName>
                <label>Aide Association</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>